--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Submit URL</title>
 </head>
 <body>
-    <form action="process.php" method="post">
+    <form action="process.php" method="get">
         <label for="url">Enter URL:</label>
         <input type="text" id="url" name="url" required>
         <button type="submit">Submit</button>
